--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
+    "mysql2": "^3.11.3",
     "nodemailer": "^6.9.14",
+    "sequelize": "^6.37.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
